# tooling

./: LICENSE  README.md
aws/: pyproject.toml
aws/aws/: main.py
aws/aws/clients/: base_client.py  log_group.py  rds.py
aws/aws/commands/: create_audit_log_groups.py
osx/: init.sh
sam/: run_local.sh  run_remote.sh
shell/: git.sh  zshrc.sh
