[project]
name = "aws"
version = "0.1.0"
description = ""
authors = [
    {name = "mireaulf",email = "mireaulf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.36.8,<2.0.0)",
    "boto3-stubs[logs,rds] (>=1.36.8,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
